# cloudflare-workers-rust

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  rust-toolchain.toml  tsconfig.json  wrangler.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
server/: Cargo.toml
server/src/: lib.rs
tests/: package.json
tests/src/: consts.ts  setup.ts  teardown.ts
tests/src/tests/: basic.test.ts
ui/: Cargo.toml  README.md  package.json  webpack.config.js
ui/entry/: aux.ts  index.html  index.ts
ui/src/: lib.rs  utils.rs
ui/src/components/: app.rs
