[workspace]
resolver = "3"
members = [
  "ui",
  "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zhengyao Lin <zhengyal@cmu.edu>"]
license = "MIT"

[workspace.dependencies]
thiserror = "2.0.17"
web-sys = "0.3.82"
js-sys = "0.3.83"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
