[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror.workspace = true
web-sys.workspace = true
axum = { version = "0.8.5", default-features = false, features = [ "macros" ] }
futures = "0.3.31"
tower-service = "0.3"
url = "2.5.7"
worker = { version = "0.7", features = ["http", "axum"] }
