[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror.workspace = true
web-sys.workspace = true
leptos = { version = "0.8.5", features = ["csr"] }
wasm-bindgen = "=0.2.106"
thaw = "0.5.0-beta"
gloo-net = "0.6.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]
